Removing references to old client name

--- a/netflix/Netflix Tutorial.ipynb
+++ b/netflix/Netflix Tutorial.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from typing import  Set, Optional\n",
-    "from terminusdb_client import WOQLClient\n",
+    "from terminusdb_client import Client\n",
     "from terminusdb_client.woqlschema.woql_schema import (\n",
     "    DocumentTemplate,\n",
     "    EnumTemplate,\n",
@@ -190,7 +190,7 @@
     "\n",
     "    # TODO: change the team name \n",
     "    team = \"TeamName\"\n",
-    "    client = WOQLClient(\"https://cloud.terminusdb.com/\"+team)\n",
+    "    client = Client(\"https://cloud.terminusdb.com/\"+team)\n",
     "    \n",
     "    try:\n",
     "        client.connect(team=team, use_token=True)\n",
